SERVER-71880 Expose fromMigrate parameter in dropCollection() API methods